1498513855 | 28 files | M bin/version.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/layout/content_browser_item.xml,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_brazilian.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_bulgarian.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_danish.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_finnish.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_french.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_german.txt,  M tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_hungarian.txt,  M tools/steamvr_environments
https://steamdb.info/patchnotes/1918060/

--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_brazilian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_brazilian.txt
@@ -651,7 +651,7 @@
 "[english]Notification_NoDestinationForcedHome"	"The host is moving this group to the {s:destination_title} environment, which you are not subscribed to. You will be returned home in {d:countdown_seconds} seconds."
 "TutorialWelcome_Title"	"Boas-vindas!"
 "[english]TutorialWelcome_Title"	"Welcome!"
-"TutorialWelcome_Tile1_Desc"	"Boas-vindas ao SteamVR! \nEste é o seu espaço inicial."
+"TutorialWelcome_Tile1_Desc"	"Boas-vindas à Central do SteamVR! Este é o seu espaço inicial."
 "[english]TutorialWelcome_Tile1_Desc"	"Welcome to SteamVR Home! This is your home space."
 "TutorialWelcome_Tile2_Desc"	"O seu espaço inicial é interativo, personalizável e social."
 "[english]TutorialWelcome_Tile2_Desc"	"Your home space is interactive, customizable, and social."
@@ -1011,7 +1011,7 @@
 "[english]CannonWars_Aiming2"	"Release the button to stop the cannon's movement."
 "CannonWars_Mine"	"Coloque uma bola de canhão aqui para fabricar uma mina explosiva."
 "[english]CannonWars_Mine"	"Place a cannonball here to craft an exploding mine."
-"VR_PropTool_ToyGun"	"Pistola a Laser"
+"VR_PropTool_ToyGun"	"Arma a Laser"
 "[english]VR_PropTool_ToyGun"	"Pop Zapper"
 "VR_Avatar_Head001_A"	"Cabeça — Bloco A"
 "[english]VR_Avatar_Head001_A"	"Head - Block A"
@@ -1109,7 +1109,7 @@
 "[english]VR_PhysicsProp_Watermelon"	"Watermelon"
 "VR_PhysicsProp_Watermelon_Desc"	"Uma melancia grande e suculenta. Perfeita para um dia quente de verão!"
 "[english]VR_PhysicsProp_Watermelon_Desc"	"A big, tasty watermelon. Perfect for a hot summer day!"
-"VR_PropTool_ToyGun_Desc"	"Junte-se aos cadetes espaciais com a sua própria réplica genuína da Pistola a Laser. A tecnologia é tão avançada que não precisa de munição!"
+"VR_PropTool_ToyGun_Desc"	"Junte-se aos cadetes espaciais com a sua própria réplica genuína da Arma a Laser. A tecnologia é tão avançada que não precisa de munição!"
 "[english]VR_PropTool_ToyGun_Desc"	"Join the junior space cadets with your very own official genuine replica Pop Zapper. It's so mind-bogglingly high-tech that it never runs out of ammo!"
 "VR_PropTool_TagMarker"	"Aerógrafo"
 "[english]VR_PropTool_TagMarker"	"Air Brush"
@@ -1657,7 +1657,7 @@
 "[english]TutorialWelcome_Touch_Bottom_Desc"	"Don't forget to visit the Workshop to download more environments from the community."
 "TutorialTeleport_Title"	"Movendo-se"
 "[english]TutorialTeleport_Title"	"Moving around"
-"TutorialTeleport_Tile1_Touch_Desc"	"Para se teletransportar, pressione e segure a alavanca."
+"TutorialTeleport_Tile1_Touch_Desc"	"Para se teletransportar, empurre a alavanca."
 "[english]TutorialTeleport_Tile1_Touch_Desc"	"To teleport, push forward on the joystick."
 "TutorialTeleport_Tile2_Touch_Desc"	"Você verá um arco que termina com um círculo verde no chão."
 "[english]TutorialTeleport_Tile2_Touch_Desc"	"You will see an arc that ends with a green circle on the ground."
@@ -1905,9 +1905,9 @@
 "[english]VR_Furniture_Stand001"	"TV Stand"
 "VR_Furniture_Stand001_Desc"	"Um rack para os seus equipamentos de lazer."
 "[english]VR_Furniture_Stand001_Desc"	"A stand for your entertainment system."
-"VR_Furniture_HousePlant001"	"Planta — Bambu"
+"VR_Furniture_HousePlant001"	"Planta"
 "[english]VR_Furniture_HousePlant001"	"House Plant"
-"VR_Furniture_HousePlant001_Desc"	"Um bambu para casas."
+"VR_Furniture_HousePlant001_Desc"	"Uma planta para casas."
 "[english]VR_Furniture_HousePlant001_Desc"	"A house plant."
 "Dashboard_Destinations_2"	"AMBIENTES"
 "[english]Dashboard_Destinations_2"	"ENVIRONMENTS"
@@ -1953,8 +1953,8 @@
 "[english]VR_PropTool_FreezeTool_Desc"	"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 "VR_PhysicsProp_TidehunterToy001"	"Brinquedo do Tidehunter"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
-"VR_PhysicsProp_TidehunterToy001_Desc"	"O brinquedo do Tidehunter do Dota 2."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"VR_PhysicsProp_TidehunterToy001_Desc"	"O brinquedo do Tidehunter do Dota 2.\n\nDestravado ao jogar Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"PEQUENA"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"GRANDE"
@@ -2231,10 +2231,10 @@
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"Ponto inicial atual"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"Ambiente do HTC Vive"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
-"PromotedItemDescription"	"Visite o ambiente criado pela HTC para usuários do Vive. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"PromotedItemTitle"	"Ambiente do Vive"
+"[english]PromotedItemTitle"	"Vive Environment"
+"PromotedItemDescription"	"Visite o ambiente criado pela HTC para usuários do Vive."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Agora não"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 avaliações"
@@ -2335,12 +2335,12 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"AMBIENTE DO VIVE"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
-"HTCPromoDesc"	"Feito pela HTC para usuários do Vive."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
-"ValvePromoTitle"	"COLEÇÃO DE AMBIENTES DA VALVE"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"HTCPromoTitle"	"ITENS DO VIVE"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
+"HTCPromoDesc"	"Não se esqueça de conferir o avatar e objeto do Vive, para donos do Vive."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"ValvePromoTitle"	"AMBIENTES DA VALVE"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Clique aqui para mais ambientes feitos por artistas da Valve para o SteamVR."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Ambientes de artistas da Valve"
@@ -2537,13 +2537,59 @@
 "[english]Quest_Pin_Hawaii_Lab"	"Aperture Science Pin Quest"
 "Quest_Pin_Hawaii_Lab_Desc"	"Encontre um broche da Aperture Science escondido entre as rochas vulcânicas na praia."
 "[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
-"VR_PhysicsProp_AudioshieldShield001"	"Escudo de Audioshield"
+"VR_PhysicsProp_AudioshieldShield001"	"Escudo de Áudio"
 "[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
-"VR_PhysicsProp_AudioshieldShield001_Desc"	"Escudo de mão do jogo Audioshield."
+"VR_PhysicsProp_AudioshieldShield001_Desc"	"Equipe em situações de bombardeamento musical.\n\nDestravado ao possuir Audioshield."
 "[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
 "VR_PhysicsProp_NekoPlushie"	"Brinquedo Neko"
 "[english]VR_PhysicsProp_NekoPlushie"	"Neko Toy"
-"VR_PhysicsProp_NekoPlushie_Desc"	"Miau miau miau miau.\n\nRéplica fiel do item visto em Fantastic Contraption."
+"VR_PhysicsProp_NekoPlushie_Desc"	"Miau miau miau miau.\n\nDestravado ao possuir Fantastic Contraption."
 "[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
+"VR_PhysicsProp_GauntletTrophy"	"A Manopla"
+"[english]VR_PhysicsProp_GauntletTrophy"	"The Gauntlet"
+"VR_PhysicsProp_GauntletTrophy_Desc"	"Caramba, Al, as máquinas nos pegaram! Pelo menos temos esta mão espacial como uma lembrança radical!\n\nDestravado ao possuir The Gallery — Call of the Starseed."
+"[english]VR_PhysicsProp_GauntletTrophy_Desc"	"Holy smokes, Al, the machine got us both! At least we have this radical souvenir space hand!\n\nUnlocked by owning The Gallery - Call of the Starseed."
+"VR_PhysicsProp_ASAmmoBox"	"Caixa de Munição"
+"[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_PhysicsProp_ASAmmoBox_Desc"	"Caixa de munição, aí sim! Bela, bela munição! \n\nDestravado ao possuir Arizona Sunshine."
+"[english]VR_PhysicsProp_ASAmmoBox_Desc"	"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by owning Arizona Sunshine."
+"VR_PhysicsProp_AirmechStrikerToy_Desc"	"AirMech classe Artilheiro de segunda geração. Este modelo em escala foi presenteado a agências governamentais que fizeram grandes pedidos.\n\nDestravado ao possuir AirMech Command."
+"[english]VR_PhysicsProp_AirmechStrikerToy_Desc"	"Second generation Striker class AirMech. This scale model was gifted to government agencies who placed very large orders.\n\nUnlocked by owning AirMech Command."
+"VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"[english]VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"VR_PhysicsProp_HJGuntherToy_Desc"	"Saindo do seu negócio alimentício, Gunther entrou no ramo dos brinquedos. Tenha a sua própria réplica do Gunther já!\n\nDestravado ao possuir Hover Junkers."
+"[english]VR_PhysicsProp_HJGuntherToy_Desc"	"Branching out from his diner business, Gunther has entered the world of merchandising. Own your very own Gunther figure today!\n\nUnlocked by owning Hover Junkers."
+"VR_Avatar_SpacePirateHelmet"	"Capacete de Pirata Espacial"
+"[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
+"VR_Avatar_SpacePirateHelmet_Desc"	"Cheio de neuro-estimulantes para aprimorar a visão, audição e a habilidade de desacelerar o tempo, esse capacete é a ferramenta perfeita para qualquer Pirata Espacial, até mesmo aqueles em treinamento.\n\nDestravado ao possuir Space Pirate Trainer."
+"[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."
+"VR_PhysicsProp_MiniAtlas"	"Mini Atlas"
+"[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
+"VR_PhysicsProp_MiniAtlas_Desc"	"Quando não está sofrendo as indignidades das tentativas de reparo pelas infelizes cobaias de GLaDOS, esse belo produto robótico dos Laboratórios Aperture agora pode sofrer as indignidades de ser uma decoração de mesa.\n\nDestravado ao jogar The Lab."
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
+"VR_PropTool_meeseeks_ball"	"Bola do Sr. Meeseeks"
+"[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
+"VR_PropTool_meeseeks_ball_Desc"	"OI! EU SOU O SR. MEESEEKS! OLHEM PRA MIM!\n\nDestravado ao possuir Rick and Morty: Virtual Rickality"
+"[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
+"VR_PhysicsProp_ViveLogoStatue"	"Escultura do Vive"
+"[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Uma abstração clássica que representa a dicotomia entre realidades pós-modernas e... olha só, é a Escultura do Logo do Vive!\n\nDisponível para usuários do Vive."
+"[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
+"VR_Avatar_ViveHeadset"	"Headset do HTC Vive"
+"[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
+"VR_Avatar_ViveHeadset_Desc"	"O headset do HTC Vive com a tira de áudio de luxo.\n\nDisponível para usuários do Vive."
+"[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
+"VR_Avatar_OnwardHead"	"Capacete do MARSOC"
+"[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
+"VR_Avatar_OnwardHead_Desc"	"Um capacete balístico do jogo tático multijogador Onward. \n\nSegurança em primeiro lugar!\n\nDestravado ao possuir Onward."
+"[english]VR_Avatar_OnwardHead_Desc"	"A ballistic helmet from the tactical multiplayer shooter, Onward. \n\nSafety first!\n\nUnlocked by owning Onward."
+"VR_Avatar_MptamHmd"	"Protótipo da Valve"
+"[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
+"VR_Avatar_MptamHmd_Desc"	"Uma câmera montada no headset reconhece códigos colados nas paredes para rastrear a posição do usuário. As telas do protótipo saíram de dois celulares conectados com circuitos personalizados."
+"[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
+"VivePromoTitle"	"Itens do Vive"
+"[english]VivePromoTitle"	"Vive Items"
+"VivePromoDesc"	"Usuários do Vive têm acesso a um avatar do headset do Vive e uma estátua do logo do Vive.\n\nPara acessá-los, abra as seções Avatares e Coisas do menu."
+"[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
 }
 }
