--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_danish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_danish.txt
@@ -1953,8 +1953,8 @@
 "[english]VR_PropTool_FreezeTool_Desc"	"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter-legetøj"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
-"VR_PhysicsProp_TidehunterToy001_Desc"	"Tidehunter-legetøjet fra Dota 2."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"VR_PhysicsProp_TidehunterToy001_Desc"	"Tidehunter-legetøjet fra Dota 2.\n\nOplåst af at spille Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"LILLE"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"STOR"
@@ -2011,10 +2011,20 @@
 "[english]SavedTutorialLabel"	"Saved Environments"
 "TutorialPrivate_Title"	"Private rum"
 "[english]TutorialPrivate_Title"	"Private Rooms"
+"TutorialPrivate_Tile1_Desc"	"Du kan invitere folk fra det Sociale panel til hvilket som helst miljø, som du besøger."
+"[english]TutorialPrivate_Tile1_Desc"	"You can invite people from the Social panel to any environment you are visiting."
+"TutorialPrivate_Tile2_Desc"	"Når du besøger et miljø for dig selv og inviterer en ven, bliver et Privat Rum skabt."
+"[english]TutorialPrivate_Tile2_Desc"	"When you are visiting an environment on your own and invite a friend a Private Room is created."
+"TutorialPrivate_Tile3_Desc"	"Når du er i dit Private Rum, kan hvilket som helst medlem invitere deres ven til rummet."
+"[english]TutorialPrivate_Tile3_Desc"	"Once in your Private Room, any member can invite their friend to the Room."
 "TutorialPrivate_Bottom_Desc"	"Som standard, starter du i dit hjemmemiljø i et privat rum."
 "[english]TutorialPrivate_Bottom_Desc"	"By default, you start out in your home environment in a Private Room."
 "TutorialSocial_Title"	"Social takt og tone"
 "[english]TutorialSocial_Title"	"Social Etiquette"
+"TutorialSocial_Tile1_Desc"	"Spillere i SteamVR forventes at følge onlineadfærdsreglerne for Steam."
+"[english]TutorialSocial_Tile1_Desc"	"Players in SteamVR are expected to adhere to the Steam Online Conduct rules."
+"TutorialSocial_Bottom_Desc"	"Rumværter har evnen til at smide spillere ud fra deres rum i Rumdetalje-panelet."
+"[english]TutorialSocial_Bottom_Desc"	"Room hosts have the ability to kick players from their room in the Room Detail panel."
 "TutorialMultiTool_Title"	"Brug af multiværktøjet"
 "[english]TutorialMultiTool_Title"	"Using the Multi-Tool"
 "TutorialMultiTool_Tile1_Desc"	"Multiværktøjet lader dig fryse, tø, klone og slette rekvisitter i SteamVR-miljøer."
@@ -2027,6 +2037,12 @@
 "[english]TutorialSaved_Tile3_Desc"	"Load Saved Environments from the Environments panel - look for the Saved tab."
 "TutorialSaved_Bottom_Desc"	"Alle rekvisitter og tegninger gemmes, når et miljø gemmes."
 "[english]TutorialSaved_Bottom_Desc"	"Props and drawings are all saved when saving an environment."
+"TutorialHome_Tile1_Desc"	"Dit Hjemmemiljø er, hvor du starter, når du åbner SteamVR."
+"[english]TutorialHome_Tile1_Desc"	"Your Home environment is where you start out in when you launch SteamVR."
+"VR_Avatar_Wearable_SailorHat001"	"Sømandshat"
+"[english]VR_Avatar_Wearable_SailorHat001"	"Sailor Hat"
+"VR_Avatar_Wearable_SailorHat001_Desc"	"En sømandshat."
+"[english]VR_Avatar_Wearable_SailorHat001_Desc"	"A sailor hat."
 "VR_Avatar_Wearable_PartyHat001"	"Festhat"
 "[english]VR_Avatar_Wearable_PartyHat001"	"Party Hat"
 "VR_Avatar_Wearable_PartyHat001_Desc"	"Tillykke med fødselsdagen!"
@@ -2189,10 +2205,10 @@
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"Nuværende Hjem"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"HTC Vive-miljø"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
-"PromotedItemDescription"	"Besøg hjemmemiljøet skabt af HTC til Vive-brugere. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"PromotedItemTitle"	"Vive-miljø"
+"[english]PromotedItemTitle"	"Vive Environment"
+"PromotedItemDescription"	"Besøg hjemmemiljøet skabt af HTC til Vive-brugere."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Ikke nu"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 vurderinger"
@@ -2293,12 +2309,12 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"VIVE-MILJØ"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"HTCPromoTitle"	"VIVE-GENSTANDE"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
 "HTCPromoDesc"	"Lavet af HTC til Vive-ejere."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
-"ValvePromoTitle"	"VALVE-MILJØSAMLING"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"ValvePromoTitle"	"VALVE-MILJØER"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Klik her for miljøer lavet af Valve-kunstnere til SteamVR."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Miljø lavet af Valve-kunstnere"
@@ -2471,5 +2487,7 @@
 "[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
 "VR_PropTool_meeseeks_ball_Desc"	"HEJ JEG ER MR. MEESEEKS! SE PÅ MIG!\n\nOplåst ved at eje Rick and Morty: Virtual Rickality"
 "[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
+"VivePromoTitle"	"Vive-genstande"
+"[english]VivePromoTitle"	"Vive Items"
 }
 }
