--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_french.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_french.txt
@@ -552,7 +552,7 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]SortAlphabetical"	"A to Z"
 "SortUpdated"	"Mis à jour"
 "[english]SortUpdated"	"Updated"
-"SortRecent"	"Récentes"
+"SortRecent"	"Récents"
 "[english]SortRecent"	"Recent"
 "SetFavoriteButtonTitle"	"Favori"
 "[english]SetFavoriteButtonTitle"	"Favorite"
@@ -1044,7 +1044,7 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]SortPlayers"	"Players"
 "SortPopular"	"Populaires"
 "[english]SortPopular"	"Popular"
-"SortTopRated"	"Mieux notées"
+"SortTopRated"	"Mieux notés"
 "[english]SortTopRated"	"Top Rated"
 "SortPlaytime"	"Temps de jeu"
 "[english]SortPlaytime"	"Playtime"
@@ -1630,7 +1630,7 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]AvatarEditText"	"Place items on the Avatar above to customize your appearance. While holding an item, use the trackpad to change its color."
 "AvatarRotateText"	"PIVOTER L'AVATAR"
 "[english]AvatarRotateText"	"ROTATE AVATAR"
-"WelcomePanel_PressBButton"	"Bienvenue dans SteamVR!/n/nAppuyez sur le bouton B ou Y de votre contrôleur pour commencer."
+"WelcomePanel_PressBButton"	"Bienvenue dans SteamVR !\n\nAppuyez sur le bouton B ou Y de votre contrôleur pour commencer."
 "[english]WelcomePanel_PressBButton"	"Welcome to SteamVR! \n\nPress the B or Y button on your controller to begin."
 "WelcomePanel_UpdateDescTouch"	"Bienvenue dans SteamVR !\n\nAppuyez sur le bouton B ou Y pour parcourir les différents environnements et rejoindre vos amis.\n\nPour vous abonner à plus d'environnements, sélectionnez l'onglet « Plus » dans le panneau Environnements. Pour plus d'infos, sélectionnez le bouton Aide."
 "[english]WelcomePanel_UpdateDescTouch"	"Welcome to SteamVR! \n\nPress the B or Y button to browse environments and meet up with friends.\n\nTo subscribe to more environments, select the 'Get More' tab in the Environments panel. For more help, select the Help button."
@@ -1956,8 +1956,8 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]VR_PropTool_FreezeTool_Desc"	"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter en peluche"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
-"VR_PhysicsProp_TidehunterToy001_Desc"	"Une peluche du Tidehunter, un héros de Dota 2."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"VR_PhysicsProp_TidehunterToy001_Desc"	"Une peluche du Tidehunter, un héros de Dota 2.\n\nDébloqué en jouant à Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"PETITE"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"GRANDE"
@@ -2010,7 +2010,7 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]SocialTutorialLabel"	"Social Etiquette"
 "MultiToolTutorialLabel"	"L'outil multifonctions"
 "[english]MultiToolTutorialLabel"	"Using the Multi-Tool"
-"SavedTutorialLabel"	"Environnements enregistrés"
+"SavedTutorialLabel"	"Envir. enregistrés"
 "[english]SavedTutorialLabel"	"Saved Environments"
 "HomeTutorialLabel"	"Configurer l'accueil"
 "[english]HomeTutorialLabel"	"Setting Your Home"
@@ -2178,7 +2178,7 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]EquipTool_Desc"	"To unequip a tool, use the grip button on your controller."
 "AvatarTutorialTitle"	"Comment personnaliser votre avatar"
 "[english]AvatarTutorialTitle"	"How to Customize Your Avatar"
-"AvatarTutorialButton"	"Explications"
+"AvatarTutorialButton"	"Aide"
 "[english]AvatarTutorialButton"	"How To"
 "RecentApps_Title"	"LANCÉES RÉCEMMENT"
 "[english]RecentApps_Title"	"RECENTLY LAUNCHED"
@@ -2238,10 +2238,10 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"Accueil actuel"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"Environnement HTC Vive"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
-"PromotedItemDescription"	"Visitez cet environnement créé par HTC pour les utilisateurs du Vive. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"PromotedItemTitle"	"Environnement Vive"
+"[english]PromotedItemTitle"	"Vive Environment"
+"PromotedItemDescription"	"Visitez cet environnement créé par HTC pour les utilisateurs du Vive."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Pas maintenant"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 évaluations"
@@ -2342,12 +2342,12 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"ENVIRONNEMENT VIVE"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
-"HTCPromoDesc"	"Créé par HTC pour les possesseurs du Vive."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
+"HTCPromoTitle"	"OBJETS VIVE"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
+"HTCPromoDesc"	"Découvrez l'avatar et les objets Vive exclusifs pour les possesseurs du Vive."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
 "ValvePromoTitle"	"ENVIRONNEMENTS DE VALVE"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Cliquez ici pour découvrir tous les environnements créés par des artistes de Valve pour SteamVR."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Environnements d'artistes Valve"
@@ -2591,10 +2591,38 @@ La montagne en arrière-plan et la bordure du cratère sont placés approximativ
 "VR_PhysicsProp_MiniAtlas"	"Atlas miniature"
 "[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
 "VR_PhysicsProp_MiniAtlas_Desc"	"Lorsqu'il ne s’agit pas d’être l’objet d'une tentative de réparation par l'un des sujets de test malchanceux de GLaDOS, ce parfait produit des laboratoires d'Aperture peut maintenant subir l'humiliation d'être utilisé comme bibelot.\n\nDébloqué en jouant à The Lab."
-"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories now can suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
 "VR_PropTool_meeseeks_ball"	"Balle de Monsieur Larbin"
 "[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
-"VR_PropTool_meeseeks_ball_Desc"	"SALUT, C'EST MOI ! MONSIEUR LARBIN ! B'SOIN D'UN COUP D'MAIN ?\n\nDébloquée pour avoir possédé Rick and Morty: Virtual Rickality."
+"VR_PropTool_meeseeks_ball_Desc"	"SALUT, C'EST MOI ! MONSIEUR LARBIN ! B'SOIN D'UN COUP D'MAIN ?\n\nDébloquée pour avoir acquis Rick and Morty: Virtual Rickality."
 "[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
+"VR_PhysicsProp_ViveLogoStatue"	"Sculpture Vive"
+"[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Une abstraction représentant la dichotomie entre la réalité post-moderne et... hé, mais c'est le logo du Vive !\n\nDisponible pour les utilisateurs du Vive."
+"[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
+"VR_Avatar_ViveHeadset"	"Casque HTC Vive"
+"[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
+"VR_Avatar_ViveHeadset_Desc"	"Le casque HTC Vive, comprenant le Deluxe Audio Strap.\n\nDisponible pour les utilisateurs du Vive."
+"[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
+"VR_Avatar_OnwardHead"	"Casque MARSOC"
+"[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
+"VR_Avatar_OnwardHead_Desc"	"Un casque de protection balistique issue du jeu de tir multijoueur Onward. \n\nLa sécurité avant tout !\n\nDéverrouillé pour avoir acquis Onward."
+"[english]VR_Avatar_OnwardHead_Desc"	"A ballistic helmet from the tactical multiplayer shooter, Onward. \n\nSafety first!\n\nUnlocked by owning Onward."
+"VR_Avatar_MptamHmd"	"Un des premiers prototypes de Valve"
+"[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
+"VR_Avatar_MptamHmd_Desc"	"Une caméra montée sur le casque identifie des codes sur les murs pour suivre les déplacements du joueur. Les écrans prototypes ont été assemblés à partir de deux téléphones portables connectés par un circuit électronique spécifique."
+"[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
+"VivePromoTitle"	"Objets Vive"
+"[english]VivePromoTitle"	"Vive Items"
+"VivePromoDesc"	"Les utilisateurs du HTC Vive ont accès à l'avatar « Casque HTC Vive » et à une statue du logo du Vive.\n\nVous pouvez les trouver dans les sections « Avatars » et « Accessoires » du menu."
+"[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
+"VR_PhysicsProp_JSCoffeeMug"	"Mug J'<3 mon job"
+"[english]VR_PhysicsProp_JSCoffeeMug"	"I <3 Job Mug"
+"VR_PhysicsProp_JSCoffeeMug_Desc"	"Bien que les humains utilisaient principalement ces récipients cylindriques en céramique pour ingérer des liquides caféinés, ils étaient aussi utilisés comme projectile par les travailleurs mécontents qui les lançaient sur leurs collègues et sur leur supérieurs.\n\nDébloqué pour avoir acquis  Job Simulator."
+"[english]VR_PhysicsProp_JSCoffeeMug_Desc"	"Although humans traditionally utilized cylindrical ceramic vessels for ingesting caffeinated liquids, these items also acted as projectiles for disgruntled workers to toss at their coworkers and superiors.\n\nUnlocked by owning Job Simulator."
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Crâne Kleer"
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy"	"Serious Skull"
+"VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Ce crâne de Kleer de qualité irréprochable, pour éblouir vos amis et terrifier vos ennemis. Prélevé directement sur un spécimen de la horde des Kleers par Sam Stone en personne. Parce que vous êtes SÉRIEUX pour tout ce qui concerne l’authenticité.\n\nDébloqué pour avoir acquis Serious Sam VR: The Last Hope."
+"[english]VR_PhysicsProp_SeriousSamKleerHeadTrophy_Desc"	"Impress your friends and frighten your enemies with this high-quality Kleer skull, organically sourced from the Kleer horde by the tender hands of Sam Stone. Because you are SERIOUS about the environment.\n\nUnlocked by owning Serious Sam VR: The Last Hope."
 }
 }
