--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_polish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_polish.txt
@@ -1956,7 +1956,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"Zabawkowy Tidehunter"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"Zabawkowy Tidehunter z Dota 2."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"MAŁE"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"DUŻE"
@@ -2239,9 +2239,9 @@
 "IsHome_Button"	"Obecna domowa"
 "[english]IsHome_Button"	"Current Home"
 "PromotedItemTitle"	"Środowisko HTC Vive"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
+"[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Odwiedź środowisko domowe stworzone przez HTC dla użytkowników Vive."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Nie teraz"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 oceny"
@@ -2342,12 +2342,12 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"ŚRODOWISKO VIVE"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
-"HTCPromoDesc"	"Stworzone przez HTC dla posiadaczy Vive."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
-"ValvePromoTitle"	"KOLEKCJA ŚRODOWISK VALVE"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"HTCPromoTitle"	"PRZEDMIOTY HTC VIVE"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
+"HTCPromoDesc"	"Nie zapomnij sprawdzić awatara i rekwizytu stworzonych dla posiadaczy HTC Vive."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"ValvePromoTitle"	"ŚRODOWISKA VALVE"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Kliknij tutaj, by zobaczyć środowiska stworzone przez artystów z Valve dla SteamVR."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Środowiska od artystów z Valve"
@@ -2490,9 +2490,9 @@
 "[english]Quest_PeanutGallery_Elephant_Desc"	"Win the Stuffed Elephant prize by scoring at least 2500 points in Peanut Gallery."
 "ContentBrowser_ItemDesc"	"{s:description}"
 "[english]ContentBrowser_ItemDesc"	"{s:description}"
-"ItemDetail_Ratings"	"Oceny"
+"ItemDetail_Ratings"	"ocen(y)"
 "[english]ItemDetail_Ratings"	"Ratings"
-"ItemDetail_Rating"	"Ocena"
+"ItemDetail_Rating"	"ocena"
 "[english]ItemDetail_Rating"	"Rating"
 "Friends_Name"	"{s:name}"
 "[english]Friends_Name"	"{s:name}"
@@ -2591,10 +2591,30 @@
 "VR_PhysicsProp_MiniAtlas"	"Miniaturowy Atlas"
 "[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
 "VR_PhysicsProp_MiniAtlas_Desc"	"Gdy nie jest upokarzany podczas próby naprawy przez jednego z nieszczęsnych obiektów testowych GLaDOS, to ten najwspanialszy cud robotycznej techniki jest upokarzany za bycie ozdobą biurkową.\n\nOdblokowanie za zagranie w The Lab."
-"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories now can suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
 "VR_PropTool_meeseeks_ball"	"Piłka pana Miszuka"
 "[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
 "VR_PropTool_meeseeks_ball_Desc"	"JESTEM PAN MISZUK! OTO JA!\n\nOdblokowane za posiadanie Rick and Morty: Virtual Rickality"
 "[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
+"VR_PhysicsProp_ViveLogoStatue"	"Rzeźba HTC Vive"
+"[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Klasyczna abstrakcja reprezentująca dychotomię pomiędzy postmodernistycznymi rzeczywistościami a... hejże, to rzeźba logo Vive!\n\nDostępne dla użytkowników HTC Vive."
+"[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
+"VR_Avatar_ViveHeadset"	"Gogle HTC Vive"
+"[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
+"VR_Avatar_ViveHeadset_Desc"	"Gogle HTC Vive wraz z Deluxe Audio Strap.\n\nDostępne dla użytkowników HTC Vive."
+"[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
+"VR_Avatar_OnwardHead"	"Hełm MARSOC"
+"[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
+"VR_Avatar_OnwardHead_Desc"	"Hełm balistyczny z Onward, taktycznej strzelaniny wieloosobowej. \n\nBezpieczeństwo przede wszystkim!\n\nOdblokowane za posiadanie Onward."
+"[english]VR_Avatar_OnwardHead_Desc"	"A ballistic helmet from the tactical multiplayer shooter, Onward. \n\nSafety first!\n\nUnlocked by owning Onward."
+"VR_Avatar_MptamHmd"	"Wczesny prototyp Valve"
+"[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
+"VR_Avatar_MptamHmd_Desc"	"Kamera zamontowana na goglach rozpoznawała kody na ścianie w celu śledzenia pozycji użytkownika. Prototypowe wyświetlacze zostały zbudowane z dwóch telefonów komórkowych podpiętych specjalnym zespołem obwodów elektrycznych."
+"[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
+"VivePromoTitle"	"Przedmioty HTC Vive"
+"[english]VivePromoTitle"	"Vive Items"
+"VivePromoDesc"	"Użytkownicy Vive posiadają dostęp do awatara gogli Vive oraz statuy logo Vive.\n\nZnajdziesz je w działach awatarów oraz rzeczy w menu."
+"[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
 }
 }
