--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_portuguese.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_portuguese.txt
@@ -1907,9 +1907,9 @@
 "[english]VR_Furniture_Stand001"	"TV Stand"
 "VR_Furniture_Stand001_Desc"	"Um suporte para o teu sistema de entretenimento."
 "[english]VR_Furniture_Stand001_Desc"	"A stand for your entertainment system."
-"VR_Furniture_HousePlant001"	"Planta - Bambu"
+"VR_Furniture_HousePlant001"	"Planta"
 "[english]VR_Furniture_HousePlant001"	"House Plant"
-"VR_Furniture_HousePlant001_Desc"	"Uma planta de bambu."
+"VR_Furniture_HousePlant001_Desc"	"Uma planta."
 "[english]VR_Furniture_HousePlant001_Desc"	"A house plant."
 "Dashboard_Destinations_2"	"AMBIENTES"
 "[english]Dashboard_Destinations_2"	"ENVIRONMENTS"
@@ -1956,7 +1956,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"Boneco do Tidehunter"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"Um brinquedo do Tidehunter, do Dota 2."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"PEQUENA"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"GRANDE"
@@ -2239,9 +2239,9 @@
 "IsHome_Button"	"Início atual"
 "[english]IsHome_Button"	"Current Home"
 "PromotedItemTitle"	"Ambiente HTC Vive"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
+"[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Visita o ambiente criado pela HTC para utilizadores do Vive."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Agora não"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 classificações"
@@ -2342,12 +2342,12 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"AMBIENTE VIVE"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
-"HTCPromoDesc"	"Criado pela HTC para utilizadores do Vive."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
-"ValvePromoTitle"	"COLEÇÃO DE AMBIENTES DA VALVE"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"HTCPromoTitle"	"ARTIGOS DO HTC VIVE"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
+"HTCPromoDesc"	"Não te esqueças de ver os itens do Vive exclusivos para utilizadores do HTC Vive."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"ValvePromoTitle"	"AMBIENTES DA VALVE"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Clica aqui para ambientes criados por artistas da Valve para o SteamVR."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Ambientes por artistas da Valve"
@@ -2532,5 +2532,89 @@
 "[english]ResetAnchorButtonText"	"Reset Position"
 "ResetAnchorDesc"	"Isto repõe o teu ambiente para ficar alinhado com o teu espaço detetado."
 "[english]ResetAnchorDesc"	"This resets your environment to line up with your tracked space."
+"VR_Avatar_Wearable_MopedHelmet001"	"Capacete de Lambreta"
+"[english]VR_Avatar_Wearable_MopedHelmet001"	"Moped Helmet"
+"VR_Avatar_Wearable_MopedHelmet001_Desc"	"Um capacete para andar de lambreta."
+"[english]VR_Avatar_Wearable_MopedHelmet001_Desc"	"A helmet for a moped rider."
+"VR_Furniture_WallClockAnalog"	"Relógio de Parede"
+"[english]VR_Furniture_WallClockAnalog"	"Wall Clock"
+"VR_Furniture_WallClockAnalog_Desc"	"Um relógio de parede analógico."
+"[english]VR_Furniture_WallClockAnalog_Desc"	"An analog wall clock."
+"VR_Avatar_Wearable_PinHawaiiChell"	"Pin - Chell no Havai"
+"[english]VR_Avatar_Wearable_PinHawaiiChell"	"Pin - Hawaiian Chell"
+"VR_Avatar_Wearable_PinHawaiiChell_Desc"	"Um pin da Chell a dançar o hula."
+"[english]VR_Avatar_Wearable_PinHawaiiChell_Desc"	"A hula-dancing Chell pin."
+"VR_Avatar_Wearable_PinHawaiiLab"	"Pin - Aperture Science"
+"[english]VR_Avatar_Wearable_PinHawaiiLab"	"Pin - Aperture Science"
+"VR_Avatar_Wearable_PinHawaiiLab_Desc"	"Um pin da Aperture Science vindo do Havai."
+"[english]VR_Avatar_Wearable_PinHawaiiLab_Desc"	"An Aperture Science themed pin from Hawaii."
+"VR_Map_HawaiiBeach"	"Praia Havaiana"
+"[english]VR_Map_HawaiiBeach"	"Hawai'i Beach"
+"VR_Map_HawaiiBeach_Desc"	"Uma praia havaiana."
+"[english]VR_Map_HawaiiBeach_Desc"	"A beach on the Island of Hawai'i."
+"Quest_Pin_Hawaii_Chell"	"Missão: Pin da Chell no Havai"
+"[english]Quest_Pin_Hawaii_Chell"	"Hawaiian Chell Pin Quest"
+"Quest_Pin_Hawaii_Chell_Desc"	"Encontra o pin da Chell a dançar o hula em cima de um tronco perto da praia."
+"[english]Quest_Pin_Hawaii_Chell_Desc"	"Find a hula-dancing Chell pin sitting on a log near the beach."
+"Quest_Pin_Hawaii_Lab"	"Missão: Pin da Aperture Science"
+"[english]Quest_Pin_Hawaii_Lab"	"Aperture Science Pin Quest"
+"Quest_Pin_Hawaii_Lab_Desc"	"Encontra o pin da Aperture Science escondido entre as rochas vulcânicas na praia."
+"[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
+"VR_PhysicsProp_AudioshieldShield001"	"Escudo do Audioshield"
+"[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
+"VR_PhysicsProp_AudioshieldShield001_Desc"	"Equipar em caso de bombardeamento musical.\n\nItem desbloqueado ao adquirir o jogo Audioshield."
+"[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
+"VR_PhysicsProp_NekoPlushie"	"Brinquedo Neko"
+"[english]VR_PhysicsProp_NekoPlushie"	"Neko Toy"
+"VR_PhysicsProp_NekoPlushie_Desc"	"Miau miau miau miau.\n\nItem desbloqueado ao adquirir o jogo Fantastic Contraption."
+"[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
+"VR_PhysicsProp_GauntletTrophy"	"A Manopla"
+"[english]VR_PhysicsProp_GauntletTrophy"	"The Gauntlet"
+"VR_PhysicsProp_GauntletTrophy_Desc"	"Caramba, Al, a máquina apanhou-nos aos dois! Pelo menos temos esta mão espacial radical como lembrança!\n\nItem desbloqueado ao adquirir o jogo The Gallery -\n Call of the Starseed."
+"[english]VR_PhysicsProp_GauntletTrophy_Desc"	"Holy smokes, Al, the machine got us both! At least we have this radical souvenir space hand!\n\nUnlocked by owning The Gallery - Call of the Starseed."
+"VR_PhysicsProp_ASAmmoBox"	"Caixa de Munições"
+"[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_PhysicsProp_ASAmmoBox_Desc"	"Uma caixa de munições, yeah baby! Ricas, ricas balas! \n\nItem desbloqueado ao adquirir o jogo Arizona Sunshine."
+"[english]VR_PhysicsProp_ASAmmoBox_Desc"	"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by owning Arizona Sunshine."
+"VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"[english]VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"VR_PhysicsProp_AirmechStrikerToy_Desc"	"Um AirMech da classe Striker de segunda geração. Este modelo de pequena escala foi oferecido a agências governamentais que encomendaram um grande número deles.\n\nItem desbloqueado ao adquirir o jogo AirMech Command."
+"[english]VR_PhysicsProp_AirmechStrikerToy_Desc"	"Second generation Striker class AirMech. This scale model was gifted to government agencies who placed very large orders.\n\nUnlocked by owning AirMech Command."
+"VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"[english]VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"VR_PhysicsProp_HJGuntherToy_Desc"	"Decidido em expandir o seu negócio para além da área da restauração, o Gunther entrou no mundo dos artigos de merchandising. Adquire já um boneco do Gunther, só para ti!\n\nItem desbloqueado ao adquirir o jogo Hover Junkers."
+"[english]VR_PhysicsProp_HJGuntherToy_Desc"	"Branching out from his diner business, Gunther has entered the world of merchandising. Own your very own Gunther figure today!\n\nUnlocked by owning Hover Junkers."
+"VR_Avatar_SpacePirateHelmet"	"Capacete de Pirata Espacial"
+"[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
+"VR_Avatar_SpacePirateHelmet_Desc"	"Repleto de neuro-estimuladores para melhorar a visão, audição e a habilidade de abrandar o tempo, este capacete é perfeito para qualquer Pirata Espacial que se preze, mesmo aqueles que ainda estão a treinar.\n\nItem desbloqueado ao adquirir o jogo Space Pirate Trainer."
+"[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."
+"VR_PhysicsProp_MiniAtlas"	"Miniatura do Atlas"
+"[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
+"VR_PhysicsProp_MiniAtlas_Desc"	"Quando não está a sofrer as indignidades das tentativas de reparação por parte de uma das cobaias desgraçadas da GLaDOS, este belo produto robótico dos laboratórios da Aperture pode agora sofrer as indignidades de ser um enfeite de mesa.\n\nItem desbloqueado ao jogar o jogo The Lab."
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
+"VR_PropTool_meeseeks_ball"	"Bola do Mr. Meeseeks"
+"[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
+"VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nItem desbloqueado ao adquirir o jogo Rick and Morty: Virtual Rick-ality."
+"[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
+"VR_PhysicsProp_ViveLogoStatue"	"Escultura do HTC Vive"
+"[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Uma abstração clássica que representa a dicotomia entre realidades pós-modernistas e... ei, é a escultura do logótipo do Vive!\n\nDisponível para todos os utilizadores do HTC Vive."
+"[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
+"VR_Avatar_ViveHeadset"	"Headset do HTC Vive"
+"[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
+"VR_Avatar_ViveHeadset_Desc"	"O headset do HTC Vive com o Deluxe Audio Strap.\n\nDisponível para todos os utilizadores do HTC Vive."
+"[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
+"VR_Avatar_OnwardHead"	"Capacete do MARSOC"
+"[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
+"VR_Avatar_OnwardHead_Desc"	"Um capacete balístico vindo do jogo de tiros multijogador tático Onward.\n\nSegurança em primeiro lugar!\n\nItem desbloqueado ao adquirir o jogo Onward."
+"[english]VR_Avatar_OnwardHead_Desc"	"A ballistic helmet from the tactical multiplayer shooter, Onward. \n\nSafety first!\n\nUnlocked by owning Onward."
+"VR_Avatar_MptamHmd"	"Protótipo da Valve"
+"[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
+"VR_Avatar_MptamHmd_Desc"	"Uma câmara no headset reconhece códigos nas paredes para detetar a posição do utilizador. Os ecrãs do protótipo foram criados a partir de dois telemóveis com circuitos modificados."
+"[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
+"VivePromoTitle"	"Artigos do HTC Vive"
+"[english]VivePromoTitle"	"Vive Items"
+"VivePromoDesc"	"Utilizadores do Vive têm acesso a um headset do Vive para o avatar e uma estátua do logótipo do Vive.\nPodes encontrá-los nas secções \"Avatares\" e \"Coisas\" no menu."
+"[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
 }
 }
