--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_schinese.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_schinese.txt
@@ -1954,7 +1954,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"潮汐猎人玩具"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"来自《Dota 2》的潮汐猎人玩具。"
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"小"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"大"
@@ -2234,9 +2234,9 @@
 "IsHome_Button"	"当前家"
 "[english]IsHome_Button"	"Current Home"
 "PromotedItemTitle"	"HTC Vive 环境"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
+"[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"访问由 HTC 为 Vive 用户创建的家居环境。 Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"以后再说"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 个评分"
@@ -2338,11 +2338,11 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"VIVE 环境"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
 "HTCPromoDesc"	"HTC 为 Vive 使用者特制。"
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
 "ValvePromoTitle"	"VALVE 环境合集"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"点击此处查看 Valve 艺术家为 SteamVR 创作的环境。"
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Valve 艺术家创作的环境"
