--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_spanish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_spanish.txt
@@ -719,6 +719,8 @@
 "[english]ValveLobby_IntroTitle"	"Welcome"
 "ValveLobby_IntroDesc"	"Hola, soy Gabe Newell y trabajo en Valve. Este es el vestíbulo de nuestras oficinas en Bellevue (Washington). En nuestro trabajo, valoramos mucho la colaboración cara a cara y hemos construido las oficinas en consecuencia. A tu alrededor podrás ver regalos de la comunidad, premios que hemos recibido y objetos relacionados con nuestros juegos y productos de hardware. Date una vuelta y dinos qué te parece. Llevamos años ofreciendo visitas para los fans en nuestras oficinas del mundo real, de modo que si algún día vienes a Seattle, pásate a saludarnos.\n"
 "[english]ValveLobby_IntroDesc"	"Hi, I’m Gabe Newell and I work at Valve. This is the lobby for our offices in Bellevue, Washington. In our work, we really value face to face collaboration so we built our offices to support that. As you look around, you may notice the gifts from the community, awards we’ve won, and items related to our games and hardware products. Take a look around and let us know what you think. We’ve been giving tours of our real-world offices to fans for years, so if you find yourself in Seattle someday, please come by and say hello.\n"
+"ValveLobby_AegisTitle"	"La Égida de los Campeones"
+"[english]ValveLobby_AegisTitle"	"The Aegis of Champions"
 "ValveLobby_AegisDesc"	"Cuando empezamos a trabajar con Icefrog en Dota 2, estaba claro que nos enfrentábamos a un desafío interesante: ¿cómo demostrar a la ingente cantidad de jugadores de Dota 1 que podían confiar en nosotros para administrar su querido juego? \n\nQueríamos probarles que nos los tomábamos tan en serio como ellos, por lo que decidimos lanzar Dota 2 revelando a la vez el torneo de The International Dota 2, un acontecimiento anual donde reunimos a los mejores equipos de Dota 2 de todo el mundo para que compitan por la Égida que ves aquí. \n\nWeta Workshop nos ayudó a crear este trofeo con colada fría de bronce y plata galvanizada. Cada año se añaden los nombres de los vencedores de The International a la inscripción que lleva en su parte posterior.\n"
 "[english]ValveLobby_AegisDesc"	"When we started working with Icefrog on Dota 2, it was clear that we had an interesting challenge: how do we show Dota 1's enormous playerbase that they could trust us to be good stewards of their beloved game? \n\nWe wanted to show them that we took it as seriously as they did, which led us to launching Dota 2 by unveiling The International Dota 2 tournament, an annual event where we bring the top Dota 2 teams from around the world to compete for the Aegis you see here. \n\nWeta Workshop helped build this trophy out of cold cast bronze & electroplated silver.  Each year the names of The International winners are added to the inscription on its back.\n"
 "ValveLobby_InjectionMouldsTitle"	"Molde del Steam Controller"
@@ -1473,7 +1475,7 @@
 "[english]BrowseAvatarsTitleWearables"	"Customize Your Avatar"
 "DoneButtonText"	"Hecho"
 "[english]DoneButtonText"	"Done"
-"Dashboard_Go_Home"	"Volver al inicio"
+"Dashboard_Go_Home"	"Ir al inicio"
 "[english]Dashboard_Go_Home"	"Go Home"
 "Dashboard_Tutorial"	"Tutoriales"
 "[english]Dashboard_Tutorial"	"Tutorials"
@@ -1553,7 +1555,7 @@
 "[english]ConfirmationLeaveLobbyMessage"	"Leaving will send all players in this room to their home environment."
 "ConfirmationGoHomeMessage"	"Al volver al inicio se enviará a todos los jugadores presentes a su entorno inicial."
 "[english]ConfirmationGoHomeMessage"	"Going home will send all players in this room to their home environment."
-"ConfirmationButtonGoHomeText"	"Volver al inicio"
+"ConfirmationButtonGoHomeText"	"Ir al inicio"
 "[english]ConfirmationButtonGoHomeText"	"Go Home"
 "InLobby_Destination"	"Estás aquí"
 "[english]InLobby_Destination"	"You are here"
@@ -1888,7 +1890,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"Juguete de Tidehunter"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"El juguete de Tidehunter de Dota 2."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"PEQUEÑA"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"GRANDE"
@@ -2164,9 +2166,9 @@
 "IsHome_Button"	"Inicio actual"
 "[english]IsHome_Button"	"Current Home"
 "PromotedItemTitle"	"Entorno de HTC Vive"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
+"[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Visita el entorno inicial creado por HTC para los usuarios de Vive. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Ahora no"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 valoraciones"
@@ -2267,12 +2269,12 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"ENTORNO VIVE"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"HTCPromoTitle"	"ARTÍCULOS DE VIVE"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
 "HTCPromoDesc"	"Creado por HTC para los propietarios de Vive."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
-"ValvePromoTitle"	"COLECCIÓN DE ENTORNOS DE VALVE"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"ValvePromoTitle"	"ENTORNOS DE VALVE"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Haz clic aquí para ver los entornos creados por los artistas de Valve para SteamVR."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Entornos creados por los artistas de Valve"
@@ -2435,15 +2437,63 @@
 "[english]VR_Furniture_WallClockAnalog_Desc"	"An analog wall clock."
 "VR_Avatar_Wearable_PinHawaiiLab"	"Pin - Personaje de Aperture Science"
 "[english]VR_Avatar_Wearable_PinHawaiiLab"	"Pin - Aperture Science"
+"VR_Map_HawaiiBeach"	"Playa de Hawái"
+"[english]VR_Map_HawaiiBeach"	"Hawai'i Beach"
+"VR_Map_HawaiiBeach_Desc"	"Una playa en la isla de Hawái."
+"[english]VR_Map_HawaiiBeach_Desc"	"A beach on the Island of Hawai'i."
+"Quest_Pin_Hawaii_Chell_Desc"	"Encuentra un pin de Chell bailando hula sobre un tronco cerca de la playa."
+"[english]Quest_Pin_Hawaii_Chell_Desc"	"Find a hula-dancing Chell pin sitting on a log near the beach."
+"Quest_Pin_Hawaii_Lab_Desc"	"Encuentra un pin de Aperture Science escondido entre las rocas de lava en la playa."
+"[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
 "VR_PhysicsProp_AudioshieldShield001"	"Escudo de Audioshield"
 "[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
+"VR_PhysicsProp_AudioshieldShield001_Desc"	"Equipar en caso de bombardeo musical.\n\nDesbloqueado por tener Audioshield."
+"[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
+"VR_PhysicsProp_NekoPlushie_Desc"	"Miau, miau, miau, miau.\n\nDesbloqueado por poseer Fantastic Contraption."
+"[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
 "VR_PhysicsProp_GauntletTrophy"	"El guantelete"
 "[english]VR_PhysicsProp_GauntletTrophy"	"The Gauntlet"
+"VR_PhysicsProp_GauntletTrophy_Desc"	"¡Santo cielo, Al, la máquina nos atrapó a los dos! Al menos tenemos esta mano espacial tan guay de recuerdo.\n\nDesbloqueado por tener The Gallery - Call of the Starseed."
+"[english]VR_PhysicsProp_GauntletTrophy_Desc"	"Holy smokes, Al, the machine got us both! At least we have this radical souvenir space hand!\n\nUnlocked by owning The Gallery - Call of the Starseed."
 "VR_PhysicsProp_ASAmmoBox"	"Caja de munición"
 "[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_PhysicsProp_ASAmmoBox_Desc"	"¡Esa caja de munición buena! ¡A las ricas balas!\n\nDesbloqueada por tener Arizona Sunshine."
+"[english]VR_PhysicsProp_ASAmmoBox_Desc"	"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by owning Arizona Sunshine."
+"VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"[english]VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"VR_PhysicsProp_AirmechStrikerToy_Desc"	"AirMech clase Striker de segunda generación. Se regaló este modelo a escala a las agencias gubernamentales que realizaron grandes pedidos.\n\nDesbloqueado por tener AirMech Command."
+"[english]VR_PhysicsProp_AirmechStrikerToy_Desc"	"Second generation Striker class AirMech. This scale model was gifted to government agencies who placed very large orders.\n\nUnlocked by owning AirMech Command."
 "VR_PhysicsProp_HJGuntherToy"	"Gunther"
 "[english]VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"VR_PhysicsProp_HJGuntherToy_Desc"	"Decidido a diversificar su negocio de restauración, Gunther se ha metido en el mundo de la promoción comercial. ¡Consigue ya tu propia figura de Gunther!\n\nDesbloqueado por tener Hover Junkers."
+"[english]VR_PhysicsProp_HJGuntherToy_Desc"	"Branching out from his diner business, Gunther has entered the world of merchandising. Own your very own Gunther figure today!\n\nUnlocked by owning Hover Junkers."
+"VR_Avatar_SpacePirateHelmet"	"Casco de pirata espacial"
+"[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
+"VR_Avatar_SpacePirateHelmet_Desc"	"Este casco, repleto de neuroestimuladores para mejorar la visión y el oído y capaz de ralentizar el tiempo, es perfecto para cualquier pirata espacial que se precie, incluso los que están en prácticas.\n\nDesbloqueado por tener Space Pirate Trainer."
+"[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."
 "VR_PhysicsProp_MiniAtlas"	"Atlas en miniatura"
 "[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
+"VR_PhysicsProp_MiniAtlas_Desc"	"Cuando no está sufriendo la humillación de ser reparado por uno de los desdichados sujetos de prueba de GLaDOS, este magnífico producto robótico de Aperture Laboratories puede sufrir la humillación de servir como adorno de escritorio.\n\nDesbloqueado por jugar a The Lab."
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
+"VR_PropTool_meeseeks_ball"	"Bola de Mr. Meeseeks"
+"[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
+"VR_PropTool_meeseeks_ball_Desc"	"¡HOLA! ¡SOY MR. MEESEEKS! ¡MÍRAME!\n\nDesbloqueada por tener Rick and Morty: Virtual Rick-ality"
+"[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
+"VR_PhysicsProp_ViveLogoStatue"	"Escultura de Vive"
+"[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Una abstracción clásica que representa la dicotomía entre las realidades posmodernas y... ¡Ey, es la escultura del logo de Vive!\n\nDisponible para los usuarios de HTC Vive."
+"[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
+"VR_Avatar_ViveHeadset"	"Visor HTC Vive"
+"[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
+"VR_Avatar_ViveHeadset_Desc"	"El visor HTC Vive con la correa Deluxe Audio.\n\nDisponible para los usuarios de HTC Vive."
+"[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
+"VR_Avatar_OnwardHead"	"Casco MARSOC"
+"[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
+"VR_Avatar_OnwardHead_Desc"	"Un casco balístico del shooter multijugador táctico Onward.\n\n¡La seguridad ante todo!\n\nDesbloqueado por tener Onward."
+"[english]VR_Avatar_OnwardHead_Desc"	"A ballistic helmet from the tactical multiplayer shooter, Onward. \n\nSafety first!\n\nUnlocked by owning Onward."
+"VR_Avatar_MptamHmd"	"Prototipo inicial de Valve"
+"[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
+"VR_Avatar_MptamHmd_Desc"	"Una cámara montada en el visor reconoce códigos colocados en las paredes para realizar un seguimiento de la posición del portador. Las pantallas del prototipo se construyeron a partir de dos teléfonos móviles conectados mediante circuitería creada para la ocasión."
+"[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
 }
 }
