--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_swedish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_swedish.txt
@@ -1956,7 +1956,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter-leksak"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"Tidehunter-leksaken från Dota 2."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"LITEN"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"STOR"
@@ -2183,6 +2183,82 @@
 "[english]RecentApps_Title"	"RECENTLY LAUNCHED"
 "RecentApps_Footer"	"För alla applikationer, tryck på Systemknappen."
 "[english]RecentApps_Footer"	"For all applications, press the System button."
+"BrowseBackgroundsTitle"	"Bakgrunder"
+"[english]BrowseBackgroundsTitle"	"Backgrounds"
+"Customize_Button"	"Ändra bakgrund"
+"[english]Customize_Button"	"Change Background"
+"DismissLabel"	"Inte just nu"
+"[english]DismissLabel"	"Not Now"
+"BrowseWorkshop_ViewInMenu"	"Visa i menyn"
+"[english]BrowseWorkshop_ViewInMenu"	"View in Menu"
+"LoadingBackgroundMessage"	"Läser in bakgrunden"
+"[english]LoadingBackgroundMessage"	"Loading Background"
+"CancelHostText"	"Avbryt"
+"[english]CancelHostText"	"Cancel"
+"VisitMessageTitle"	"Vilken version?"
+"[english]VisitMessageTitle"	"Which version?"
+"Friends_App_Title"	"{s:in_app_name}"
+"[english]Friends_App_Title"	"{s:in_app_name}"
+"CustomizeButtonLabel"	"Anpassa avatar"
+"[english]CustomizeButtonLabel"	"Customize Avatar"
+"ArtworkTabText"	"KONSTVERK"
+"[english]ArtworkTabText"	"ARTWORK"
+"ScreenshotNumber"	"{d:max_publishedfileid}"
+"[english]ScreenshotNumber"	"{d:max_publishedfileid}"
+"SteamPlayerNumber"	"{d:current_player_count}"
+"[english]SteamPlayerNumber"	"{d:current_player_count}"
+"VRTitleLabel"	"{s:app_name}"
+"[english]VRTitleLabel"	"{s:app_name}"
+"UGCItem_Creator_Artwork_Text"	"Konstverk av:"
+"[english]UGCItem_Creator_Artwork_Text"	"Artwork By:"
+"UGCItem_Creator"	"{s:creator_name}"
+"[english]UGCItem_Creator"	"{s:creator_name}"
+"UGCItem_Title_Text"	"Från:"
+"[english]UGCItem_Title_Text"	"From:"
+"UGCItem_Title"	"{s:item_text}"
+"[english]UGCItem_Title"	"{s:item_text}"
+"SaveCopyLabel"	"Gör en kopia"
+"[english]SaveCopyLabel"	"Make a Copy"
+"LaunchConfirmationText"	"{s:launch_app_name}"
+"[english]LaunchConfirmationText"	"{s:launch_app_name}"
+"LaunchButtonText"	"Starta"
+"[english]LaunchButtonText"	"Launch"
+"DetailsButtonText"	"Detaljer"
+"[english]DetailsButtonText"	"Details"
+"CancelButtonText"	"Avbryt"
+"[english]CancelButtonText"	"Cancel"
+"ShowAllAppsText"	"Visa alla applikationer"
+"[english]ShowAllAppsText"	"View All Applications"
+"WorldPublicLobbyTitle"	"RUM"
+"[english]WorldPublicLobbyTitle"	"ROOMS"
+"NoAppsTitle"	"VÄLKOMMEN!"
+"[english]NoAppsTitle"	"WELCOME!"
+"VRHome_Patio_Title"	"SPARAR"
+"[english]VRHome_Patio_Title"	"SAVING"
+"VRHome_Config_Previous"	"FÖREGÅENDE"
+"[english]VRHome_Config_Previous"	"PREVIOUS"
+"VRHome_Config_Next"	"NÄSTA"
+"[english]VRHome_Config_Next"	"NEXT"
+"VRHome_Config_Default"	"STANDARD"
+"[english]VRHome_Config_Default"	"DEFAULT"
+"VRHome_Config_Bedroom"	"SOVRUM"
+"[english]VRHome_Config_Bedroom"	"BEDROOM"
+"VRHome_Config_Office"	"KONTOR"
+"[english]VRHome_Config_Office"	"OFFICE"
+"VRHome_Sky_Change"	"BAKGRUNDER"
+"[english]VRHome_Sky_Change"	"BACKGROUNDS"
+"VRHome_Sky_Default"	"STANDARD"
+"[english]VRHome_Sky_Default"	"DEFAULT"
+"VRHome_Sky_Night"	"NATT"
+"[english]VRHome_Sky_Night"	"NIGHT"
+"VRHome_Sky_Plateau"	"PLATÅ"
+"[english]VRHome_Sky_Plateau"	"PLATEAU"
+"VRHome_Patio_Default"	"STANDARD"
+"[english]VRHome_Patio_Default"	"DEFAULT"
+"VRHome_Patio_Statue"	"STATY"
+"[english]VRHome_Patio_Statue"	"STATUE"
+"VRHome_Patio_Bar"	"BAR"
+"[english]VRHome_Patio_Bar"	"BAR"
 "ItemDetail_Ratings"	"Betyg"
 "[english]ItemDetail_Ratings"	"Ratings"
 "ItemDetail_Rating"	"Betyg"
