--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_thai.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_thai.txt
@@ -1148,7 +1148,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"ตุ๊กตาของเล่น Tidehunter"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"ตุ๊กตาของเล่น Tidehunter จาก Dota 2"
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"เล็ก"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"ใหญ่"
@@ -1358,9 +1358,9 @@
 "IsHome_Button"	"หน้าหลักในขณะนี้"
 "[english]IsHome_Button"	"Current Home"
 "PromotedItemTitle"	"สภาพแวดล้อมของ HTC Vive"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
+"[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"เยี่ยมชมสภาพแวดล้อมภายในบ้านที่สร้างขึ้นโดย HTC สำหรับผู้ใช้ Vive  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"ไม่ใช่ตอนนี้"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 คะแนน"
@@ -1462,11 +1462,11 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"สภาพแวดล้อมของ VIVE"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
 "HTCPromoDesc"	"สร้างโดย HTC สำหรับเจ้าของ Vive"
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
 "ValvePromoTitle"	"ชุดสะสมสภาพแวดล้อมของ VALVE"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"คลิกที่นี่สำหรับสภาพแวดล้อมที่สร้างขึ้นโดยศิลปินของ Valve สำหรับ SteamVR"
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"สภาพแวดล้อมโดยศิลปินของ Valve"
