--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_ukrainian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_ukrainian.txt
@@ -1954,7 +1954,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"Іграшковий Tidehunter"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"Іграшковий Tidehunter з гри Dota 2."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"МАЛЕНЬКА"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"ВЕЛИКА"
@@ -2236,9 +2236,9 @@
 "IsHome_Button"	"Поточна домівка"
 "[english]IsHome_Button"	"Current Home"
 "PromotedItemTitle"	"Середовище HTC Vive"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
+"[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Відвідайте домашнє середовище, створене HTC для користувачів Vive."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Не зараз"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 оцінки"
@@ -2339,12 +2339,12 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"СЕРЕДОВИЩЕ VIVE"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
-"HTCPromoDesc"	"Зроблено HTC для власників Vive."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
-"ValvePromoTitle"	"КОЛЕКЦІЯ СЕРЕДОВИЩ VALVE"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"HTCPromoTitle"	"ПРЕДМЕТИ HTC VIVE"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
+"HTCPromoDesc"	"Не забудьте оглянути аватар та об’єкт Vive для власників HTC Vive."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"ValvePromoTitle"	"СЕРЕДОВИЩА VALVE"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Натисніть тут, щоб оглянути середовища, створені художниками Valve для SteamVR."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Середовища від художників Valve"
@@ -2557,5 +2557,61 @@
 "[english]Quest_Pin_Hawaii_Lab"	"Aperture Science Pin Quest"
 "Quest_Pin_Hawaii_Lab_Desc"	"Знайдіть прихований значок лабораторії Aperture серед вулканічного каміння на пляжі."
 "[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
+"VR_PhysicsProp_AudioshieldShield001"	"Звуковий щит"
+"[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
+"VR_PhysicsProp_AudioshieldShield001_Desc"	"Вдягніть на випадок музичного бомбардування.\n\nРозблоковано завдяки володінню Audioshield."
+"[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
+"VR_PhysicsProp_NekoPlushie"	"Іграшка Neko"
+"[english]VR_PhysicsProp_NekoPlushie"	"Neko Toy"
+"VR_PhysicsProp_NekoPlushie_Desc"	"Няв-няв-няв-няв.\n\nРозблоковано завдяки володінню Fantastic Contraption."
+"[english]VR_PhysicsProp_NekoPlushie_Desc"	"Meow meow meow meow.\n\nUnlocked by owning Fantastic Contraption."
+"VR_PhysicsProp_GauntletTrophy"	"Рукавиця"
+"[english]VR_PhysicsProp_GauntletTrophy"	"The Gauntlet"
+"VR_PhysicsProp_GauntletTrophy_Desc"	"Чорт забирай, Ал, машина дістала нас обох! Принаймні, у нас є ця радикальна сувенірна космічна рука!\n\nРозблоковано завдяки володінню The Gallery — Call of the Starseed."
+"[english]VR_PhysicsProp_GauntletTrophy_Desc"	"Holy smokes, Al, the machine got us both! At least we have this radical souvenir space hand!\n\nUnlocked by owning The Gallery - Call of the Starseed."
+"VR_PhysicsProp_ASAmmoBox"	"Ящик з набоями"
+"[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_PhysicsProp_ASAmmoBox_Desc"	"Ящик з набоями, так, крихітко! Солодкі, солодкі набої! \n\nРозблоковано завдяки володінню Arizona Sunshine."
+"[english]VR_PhysicsProp_ASAmmoBox_Desc"	"Ammo Box, Yeah baby! Sweet, sweet ammo! \n\nUnlocked by owning Arizona Sunshine."
+"VR_PhysicsProp_AirmechStrikerToy"	"Нападник бета"
+"[english]VR_PhysicsProp_AirmechStrikerToy"	"Beta Striker"
+"VR_PhysicsProp_AirmechStrikerToy_Desc"	"Друге покоління класу Striker AirMech. Ця масштабована модель була подарована урядовим установам, які розмістили дуже великі замовлення.\n\nРозблоковано завдяки володінню AirMech Command."
+"[english]VR_PhysicsProp_AirmechStrikerToy_Desc"	"Second generation Striker class AirMech. This scale model was gifted to government agencies who placed very large orders.\n\nUnlocked by owning AirMech Command."
+"VR_PhysicsProp_HJGuntherToy"	"Ґантер"
+"[english]VR_PhysicsProp_HJGuntherToy"	"Gunther"
+"VR_PhysicsProp_HJGuntherToy_Desc"	"Вийшовши зі свого ресторанного бізнесу, Ґантер увійшов у світ мерчендайзингу. Зберіть власну фігуру Ґантера сьогодні!\n\nРозблоковано завдяки володінню Hover Junkers."
+"[english]VR_PhysicsProp_HJGuntherToy_Desc"	"Branching out from his diner business, Gunther has entered the world of merchandising. Own your very own Gunther figure today!\n\nUnlocked by owning Hover Junkers."
+"VR_Avatar_SpacePirateHelmet"	"Шолом космічного пірата"
+"[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
+"VR_Avatar_SpacePirateHelmet_Desc"	"Шолом, наповнений нейро-стимуляторами для покращення бачення, чуття та можливості сповільнювати час, є ідеальним для будь-якого провідного космічного пірата, і навіть для початківців.\n\nРозблоковано завдяки володінню Space Pirate Trainer."
+"[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."
+"VR_PhysicsProp_MiniAtlas"	"Мініатюрний атлас"
+"[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
+"VR_PhysicsProp_MiniAtlas_Desc"	"Цей чудовий роботехнічний продукт лабораторії «Aperture» раніше зазнавав принизливих спроб ремонту від безталанних піддослідних суб’єктів ҐЛаДОС, а нині мусить страждати, слугуючи прикрасою для столу.\n\nРозблоковано завдяки грі The Lab."
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
+"VR_PropTool_meeseeks_ball"	"М’яч пана Місікса"
+"[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
+"VR_PropTool_meeseeks_ball_Desc"	"ПРИВІТ! Я ПАН МІСІКС! ПОГЛЯНЬТЕ НА МЕНЕ!\n\nРозблоковано завдяки володінню Rick and Morty: Virtual Rickality."
+"[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
+"VR_PhysicsProp_ViveLogoStatue"	"Скульптура HTC Vive"
+"[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Класична абстракція, яка представляє дихотомію між реальностями постмодернізму і… агов, це скульптура логотипу Vive!\n\nДоступно користувачам HTC Vive."
+"[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
+"VR_Avatar_ViveHeadset"	"Шолом HTC Vive"
+"[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
+"VR_Avatar_ViveHeadset_Desc"	"Шолом HTC Vive з Deluxe Audio Strap.\n\nДоступно користувачам HTC Vive."
+"[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
+"VR_Avatar_OnwardHead"	"Шолом MARSOC"
+"[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
+"VR_Avatar_OnwardHead_Desc"	"Балістичний шолом із тактичного багатокористувацького шутера Onward. \n\nБезпека насамперед!\n\nЗдобуто володінням гри Onward."
+"[english]VR_Avatar_OnwardHead_Desc"	"A ballistic helmet from the tactical multiplayer shooter, Onward. \n\nSafety first!\n\nUnlocked by owning Onward."
+"VR_Avatar_MptamHmd"	"Ранній прототип Valve"
+"[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
+"VR_Avatar_MptamHmd_Desc"	"Змонтована на шоломі камера розпізнає розміщені на стінах коди для відстеження позиції носія. Прототипи екранів зроблено із двох стільникових телефонів, з’єднаних за спеціальною схемою."
+"[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
+"VivePromoTitle"	"Предмети HTC Vive"
+"[english]VivePromoTitle"	"Vive Items"
+"VivePromoDesc"	"Користувачі Vive мають доступ до аватарки шолома Vive і скульптури логотипу Vive.\n\nЇх можна знайти у розділах меню «Аватари» і «Елементи»."
+"[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
 }
 }
