--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_czech.txt
@@ -1956,7 +1956,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"Hračka Tidehuntera ze hry Dota 2."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"MALÁ"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"VELKÁ"
@@ -2239,9 +2239,9 @@
 "IsHome_Button"	"Stávající domov"
 "[english]IsHome_Button"	"Current Home"
 "PromotedItemTitle"	"Prostředí HTC Vive"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
+"[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Navštivte domovské prostředí vytvořené společností HTC pro uživatele headsetu Vive. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Nyní ne"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 hodnocení"
@@ -2342,12 +2342,12 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"PROSTŘEDÍ VIVE"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
-"HTCPromoDesc"	"Vytvořeno společností HTC pro vlastníky headsetu Vive."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
-"ValvePromoTitle"	"KOLEKCE PROSTŘEDÍ OD VALVE"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"HTCPromoTitle"	"PŘEDMĚTY HTC VIVE"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
+"HTCPromoDesc"	"Exkluzivní avatar a objekt pro vlastníky headsetu HTC Vive."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"ValvePromoTitle"	"PROSTŘEDÍ OD VALVE"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Zde naleznete prostředí vytvořená pro režim SteamVR přímo ve společnosti Valve."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Prostředí od společnosti Valve"
@@ -2588,5 +2588,33 @@
 "[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
 "VR_Avatar_SpacePirateHelmet_Desc"	"Helma plná neurostimulantů pro zlepšení zraku, slechu a možnost zpomalit čas. Hodí se jak začínajícím bukanýrům, tak ostříleným pirátům.\n\nDárek za vlastnění hry Space Pirate Trainer."
 "[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."
+"VR_PhysicsProp_MiniAtlas"	"Miniatura Atlase"
+"[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
+"VR_PhysicsProp_MiniAtlas_Desc"	"Když zrovna netrpí pod rukama jednoho z nemotorných testovacích subjektů, je používán jako dekorace. Takový je život Atlasův.\n\nDárek ze hry The Lab."
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
+"VR_PropTool_meeseeks_ball"	"Míček pana Meeseekse"
+"[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
+"VR_PropTool_meeseeks_ball_Desc"	"AHÓJ, JÁ JSEM PAN MEESEEKS! PODÍVEJTE SE NA MĚ!\n\nDárek za vlastnění hry Rick and Morty: Virtual Rick-ality."
+"[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
+"VR_PhysicsProp_ViveLogoStatue"	"Skulptura HTC Vive"
+"[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Klasická abstraktní skulptura reprezentující rozpor mezi postmodernismem a... tak počkat, vždyť je to logo zařízení Vive!\n\nDostupné uživatelům headsetu HTC Vive."
+"[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
+"VR_Avatar_ViveHeadset"	"Headset HTC Vive"
+"[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
+"VR_Avatar_ViveHeadset_Desc"	"Headset HTC Vive doplněný příslušenstvím Deluxe Audio Strap.\n\nDostupné uživatelům headsetu HTC Vive."
+"[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
+"VR_Avatar_OnwardHead"	"Přilba MARSOC"
+"[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
+"VR_Avatar_OnwardHead_Desc"	"Balistická přilba z taktické multiplayerové střílečky Onward.\n\nBezpečnost především!\n\nDárek za vlastnění hry Onward."
+"[english]VR_Avatar_OnwardHead_Desc"	"A ballistic helmet from the tactical multiplayer shooter, Onward. \n\nSafety first!\n\nUnlocked by owning Onward."
+"VR_Avatar_MptamHmd"	"Raný prototyp headsetu"
+"[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
+"VR_Avatar_MptamHmd_Desc"	"Pro zjišťování polohy nositele byly využívány kódy na zdech, zatímco samotné displeje headsetu tvořily dva mobilní telefony propojené vlastnoručně vyrobenými obvody."
+"[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
+"VivePromoTitle"	"Předměty HTC Vive"
+"[english]VivePromoTitle"	"Vive Items"
+"VivePromoDesc"	"Uživatelé headsetu Vive mohou nově využít exkluzivního avatara a skulpturu.\n\nPředměty lze nalézt v sekcích „Avatary“ a „Objekty“."
+"[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
 }
 }
