--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_finnish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_finnish.txt
@@ -1954,7 +1954,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter-lelu"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"Dota 2:n Tidehunter-lelu."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"PIENI"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"SUURI"
@@ -2236,9 +2236,9 @@
 "IsHome_Button"	"Koti tällä hetkellä"
 "[english]IsHome_Button"	"Current Home"
 "PromotedItemTitle"	"HTC Vive -ympäristö"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
+"[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Vieraile HTC:n luomassa Viven käyttäjille tarkoitetussa kotiympäristössä."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Myöhemmin"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 arvostelua"
@@ -2340,11 +2340,11 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"VIVE-YMPÄRISTÖ"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
 "HTCPromoDesc"	"HTC:ltä Viven omistajille."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
 "ValvePromoTitle"	"VALVE-YMPÄRISTÖJEN KOKOELMA"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Klikkaa tästä nähdäksesi Valven taiteilijoiden tekemät SteamVR-ympäristöt."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Valven taiteilijoiden tekemät ympäristöt"
@@ -2585,5 +2585,33 @@
 "[english]VR_Avatar_SpacePirateHelmet"	"Space Pirate Helmet"
 "VR_Avatar_SpacePirateHelmet_Desc"	"Neurostimulattoreilla tehostettu näkö, äänet ja kyky hidastaa aikaa. Tämä kypärä on täydellinen kaikille avaruusmerirosvoille, myös harjoittelijoille."
 "[english]VR_Avatar_SpacePirateHelmet_Desc"	"Filled with neuro-stimulators to enhance vision, sound and the ability to slow down time, this helmet is the perfect kit for any top Space Pirate, even those in training.\n\nUnlocked by owning Space Pirate Trainer."
+"VR_PhysicsProp_MiniAtlas"	"Atlaksen pienoismalli"
+"[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
+"VR_PhysicsProp_MiniAtlas_Desc"	"Silloin kun tämä Aperture laboratorioiden upea robotti ei joudu nöyryytetyksi GLaDOSin onnettomia testaajien korjauksien kanssa, joutuu se häpeämään oloaan koriste-esineenä.\n\nAvattu pelaamalla peliä The Lab."
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
+"VR_PropTool_meeseeks_ball"	"Mr. Meeseeks -pallo"
+"[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
+"VR_PropTool_meeseeks_ball_Desc"	"HEI! OLEN MR MEESEEKS! KATSOKAA MINUA!\n\nAvattu omistamalla peli Rick and Morty: Virtual Rickality"
+"[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
+"VR_PhysicsProp_ViveLogoStatue"	"HTC Vive -veistos"
+"[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Klassinen abstraktio jossa post-modernien todellisuuksien kahtiajako ja ... hei, sehän on veistos Viven logosta!\n\nHTC Viven käyttäjille."
+"[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
+"VR_Avatar_ViveHeadset"	"HTC Vive -visiiri"
+"[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
+"VR_Avatar_ViveHeadset_Desc"	"HTC Vive -visiiri Deluxe Audio -hihnoilla.\n\nHTC Viven käyttäjille."
+"[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
+"VR_Avatar_OnwardHead"	"MARSOC-kypärä"
+"[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
+"VR_Avatar_OnwardHead_Desc"	"Ballistinen kypärä taktisesta moninpeliammuskelusta, Onwardista. \n\nTurvallisuus ennen kaikkea!\n\nAvautuu Onwardin omistajille."
+"[english]VR_Avatar_OnwardHead_Desc"	"A ballistic helmet from the tactical multiplayer shooter, Onward. \n\nSafety first!\n\nUnlocked by owning Onward."
+"VR_Avatar_MptamHmd"	"Valven varhainen koekappale"
+"[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
+"VR_Avatar_MptamHmd_Desc"	"Visiirin kamera tunnistaa koodeja seiniltä käyttäjän asennon tunnistamiseksi. Koekappaleen näyttö rakennettiin liittämällä yhteen kaksi matkapuhelimen näyttöä."
+"[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
+"VivePromoTitle"	"HTC Vive -esineet"
+"[english]VivePromoTitle"	"Vive Items"
+"VivePromoDesc"	"Viven käyttäjät saavat Vive-visiiri avatarin ja Viven logopatsaan.\n\nLöydät nämä valikon avatarit ja esineet osioista."
+"[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
 }
 }
