--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_german.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_german.txt
@@ -1956,7 +1956,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter-Spielzeug"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"Tidehunter-Spielzeug aus Dota 2."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"KLEIN"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"GROSS"
@@ -2238,9 +2238,9 @@
 "IsHome_Button"	"Aktueller Startort"
 "[english]IsHome_Button"	"Current Home"
 "PromotedItemTitle"	"HTC Vive-Umgebung"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
+"[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Besuchen Sie die von HTC für Vive-Benutzer erstellte Startumgebung. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Nicht jetzt"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 Bewertungen"
@@ -2342,11 +2342,11 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"VIVE UMGEBUNG"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
 "HTCPromoDesc"	"Von HTC für Vive-Benutzer erstellt."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
 "ValvePromoTitle"	"VALVE UMGEBUNGEN-SAMMLUNG"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Klicken Sie hier für Umgebungen, die von Valve-Künstlern für SteamVR erstellt wurden."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Umgebungen von Valve-Künstlern"
@@ -2509,5 +2509,11 @@
 "[english]VR_Map_HawaiiBeach_Desc"	"A beach on the Island of Hawai'i."
 "VR_PhysicsProp_ASAmmoBox"	"Munitionskiste"
 "[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_Avatar_ViveHeadset"	"HTC-Vive-Headset"
+"[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
+"VR_Avatar_OnwardHead"	"MARSOC-Helm"
+"[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
+"VivePromoTitle"	"HTC-Vive-Gegenstände"
+"[english]VivePromoTitle"	"Vive Items"
 }
 }
