--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_hungarian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_hungarian.txt
@@ -1956,7 +1956,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter játék"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"A Tidehunter játék a Dota 2-ből."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"KICSI"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"NAGY"
@@ -2239,9 +2239,9 @@
 "IsHome_Button"	"Jelenlegi otthon"
 "[english]IsHome_Button"	"Current Home"
 "PromotedItemTitle"	"HTC Vive környezet"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
+"[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Látogasd meg a HTC által a Vive felhasználóknak készített otthoni környezetet."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Most nem"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 értékelés"
@@ -2342,12 +2342,12 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"VIVE KÖRNYEZET"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
-"HTCPromoDesc"	"A HTC készítette a Vive tulajdonosoknak."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
-"ValvePromoTitle"	"VALVE KÖRNYEZETEK GYŰJTEMÉNY"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"HTCPromoTitle"	"HTC VIVE TÁRGYAK"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
+"HTCPromoDesc"	"Ne felejtsd el megnézni a HTC Vive tulajdonosoknak készült Vive avatárt és kelléket."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"ValvePromoTitle"	"VALVE KÖRNYEZETEK"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Kattints ide a Valve grafikusai által készített SteamVR környezetekért."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Környezetek a Valve grafikusaitól"
@@ -2591,10 +2591,30 @@
 "VR_PhysicsProp_MiniAtlas"	"Miniatűr Atlas"
 "[english]VR_PhysicsProp_MiniAtlas"	"Miniature Atlas"
 "VR_PhysicsProp_MiniAtlas_Desc"	"Amikor nem a GLaDOS egyik szerencsétlen tesztalanya által megkísérelt javítás megaláztatásaitól szenved, az Aperture Laboratórium e remek robotterméke most már az asztaldísz-lét megaláztatásaitól szenvedhet.\n\nA The Lab játszásával oldható fel."
-"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories now can suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
+"[english]VR_PhysicsProp_MiniAtlas_Desc"	"When not suffering the indignities of attempted repair by one of GLaDOS's hapless test subjects, this fine robotic product of Aperture Laboratories can now suffer the indignities of being a desk ornament.\n\nUnlocked by playing The Lab."
 "VR_PropTool_meeseeks_ball"	"Mr. Meeseeks labda"
 "[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
 "VR_PropTool_meeseeks_ball_Desc"	"HELLÓ! MR. MEESEEKS VAGYOK! IDE SÜSS!\n\nA Rick and Morty: Virtual Rick-ality beszerzésével oldható fel."
 "[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
+"VR_PhysicsProp_ViveLogoStatue"	"HTC Vive szobor"
+"[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Azon kettősséget megjelenítő klasszikus absztrakt, amely a posztmodernista valóság és a... Hé, ez a Vive logó szobor!\n\nA HTC Vive felhasználók számára érhető el."
+"[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
+"VR_Avatar_ViveHeadset"	"HTC Vive fejszett"
+"[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
+"VR_Avatar_ViveHeadset_Desc"	"A HTC Vive fejszett Deluxe Audio Strappal.\n\nA HTC Vive felhasználóknak érhető el."
+"[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
+"VR_Avatar_OnwardHead"	"MARSOC sisak"
+"[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
+"VR_Avatar_OnwardHead_Desc"	"Golyóálló sisak az Onward többjátékos taktikai lövöldözős játékból.\n\nElső a biztonság!\n\nAz Onward beszerzésével oldható fel."
+"[english]VR_Avatar_OnwardHead_Desc"	"A ballistic helmet from the tactical multiplayer shooter, Onward. \n\nSafety first!\n\nUnlocked by owning Onward."
+"VR_Avatar_MptamHmd"	"Korai Valve prototípus"
+"[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
+"VR_Avatar_MptamHmd_Desc"	"Egy, a fejszettre rögzített kamera felismeri a falon lévő kódokat, hogy kövesse viselője pozícióját. A prototípus kijelzői két, egyedi áramkörökkel összekötött mobiltelefonból készültek."
+"[english]VR_Avatar_MptamHmd_Desc"	"A camera mounted on the headset recognizes codes placed on the walls to track the wearer's position. The prototype displays were built from two cellphones connected with custom circuitry."
+"VivePromoTitle"	"HTC Vive tárgyak"
+"[english]VivePromoTitle"	"Vive Items"
+"VivePromoDesc"	"A Vive felhasználóknak hozzáférése van egy Vive fejszett avatárhoz és egy Vive logó szoborhoz.\n\nEzeket a menü Avatárok, illetve Dolgok részeiben találod."
+"[english]VivePromoDesc"	"Vive users have access to a Vive Headset Avatar and a Vive Logo statue.\n\nYou can find these in the Avatars and Things sections of the menu."
 }
 }
