--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_italian.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_italian.txt
@@ -1954,7 +1954,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"Giocattolo di Tidehunter"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"Il giocattolo di Tidehunter, un Eroe di Dota 2."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"PICCOLA"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"GRANDE"
@@ -2236,9 +2236,9 @@
 "IsHome_Button"	"Inizio attuale"
 "[english]IsHome_Button"	"Current Home"
 "PromotedItemTitle"	"Ambiente per HTC Vive"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
+"[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Visita l'ambiente iniziale creato da HTC per gli utenti di Vive. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Non ora"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 valutazioni"
@@ -2339,12 +2339,12 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"AMBIENTE VIVE"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"HTCPromoTitle"	"OGGETTI DI HTC VIVE"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
 "HTCPromoDesc"	"Creato da HTC per gli utenti di Vive."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
-"ValvePromoTitle"	"COLLEZIONE DI AMBIENTI DI VALVE"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"ValvePromoTitle"	"AMBIENTI DI VALVE"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Clicca qui per gli ambienti creati dagli artisti di Valve per SteamVR."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Ambienti degli artisti di Valve"
@@ -2579,5 +2579,17 @@
 "[english]VR_PropTool_meeseeks_ball"	"Mr. Meeseeks Ball"
 "VR_PropTool_meeseeks_ball_Desc"	"CIAO! SONO MR. MIGUARDI! GUARDATEMI!\n\nSbloccato per aver acquistato Rick and Morty: Virtual Rickality"
 "[english]VR_PropTool_meeseeks_ball_Desc"	"HI! I'M MR MEESEEKS! LOOK AT ME!\n\nUnlocked by owning Rick and Morty: Virtual Rickality"
+"VR_PhysicsProp_ViveLogoStatue"	"Scultura di HTC Vive"
+"[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
+"VR_PhysicsProp_ViveLogoStatue_Desc"	"Un'astrazione classica che rappresenta la dicotomia tra le realtà post-moderne e... ehi, è la scultura del logo di Vive!\n\nDisponibile per gli utenti di HTC Vive."
+"[english]VR_PhysicsProp_ViveLogoStatue_Desc"	"A classic abstraction that represents the dichotomy between post-modernist realities and... hey, it’s the Vive Logo Sculpture!\n\nAvailable to Vive users."
+"VR_Avatar_ViveHeadset"	"Visore di HTC Vive"
+"[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
+"VR_Avatar_ViveHeadset_Desc"	"Il visore di HTC Vive con tanto di Deluxe Audio Strap.\n\nDisponibile per gli utenti di HTC Vive."
+"[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
+"VR_Avatar_OnwardHead"	"Elmetto MARSOC"
+"[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
+"VR_Avatar_MptamHmd"	"Prototipo di Valve"
+"[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
 }
 }
