--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_japanese.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_japanese.txt
@@ -1954,7 +1954,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter のフィギュア"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"Dota 2 の Tidehunter のフィギュア。"
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"小"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"大"
@@ -2236,9 +2236,9 @@
 "IsHome_Button"	"現在のホーム"
 "[english]IsHome_Button"	"Current Home"
 "PromotedItemTitle"	"HTC Vive 環境"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
+"[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"HTC が Vive ユーザーのために制作したホーム環境を訪問しよう。Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"またの機会に"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 個の評価"
@@ -2340,11 +2340,11 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"VIVE 環境"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
 "HTCPromoDesc"	"HTC が Vive ユーザー向けに制作。"
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
 "ValvePromoTitle"	"VALVE 環境 コレクション"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Valve のアーティストが SteamVR 用に制作した環境を見るにはここをクリック。"
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Valve アーティストの製作した環境"
