--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_koreana.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_koreana.txt
@@ -1954,7 +1954,7 @@
 "VR_PhysicsProp_TidehunterToy001"	"장난감 파도사냥꾼"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
 "VR_PhysicsProp_TidehunterToy001_Desc"	"Dota 2에 나오는 파도사냥꾼 장난감입니다."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"소형"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"대형"
@@ -2234,9 +2234,9 @@
 "IsHome_Button"	"현재 홈"
 "[english]IsHome_Button"	"Current Home"
 "PromotedItemTitle"	"HTC Vive 환경"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
+"[english]PromotedItemTitle"	"Vive Environment"
 "PromotedItemDescription"	"Vive 사용자를 위해 HTC에서 만든 홈 환경을 방문해 보세요. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"나중에"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"평가 32개"
@@ -2338,11 +2338,11 @@
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
 "HTCPromoTitle"	"Vive 환경"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
 "HTCPromoDesc"	"Vive 플레이어를 위해 HTC에서 만들었습니다."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
 "ValvePromoTitle"	"Valve 환경 모음"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"Valve 아티스트가 만든 SteamVR 환경을 보려면 클릭하세요."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Valve 아티스트가 만든 환경"
@@ -2489,5 +2489,9 @@
 "[english]ResetAnchorButtonText"	"Reset Position"
 "VR_Map_HawaiiBeach"	"하와이 해변"
 "[english]VR_Map_HawaiiBeach"	"Hawai'i Beach"
+"VR_Map_HawaiiBeach_Desc"	"하와이 섬에 있는 해변입니다."
+"[english]VR_Map_HawaiiBeach_Desc"	"A beach on the Island of Hawai'i."
+"VR_PhysicsProp_NekoPlushie"	"고양이 인형"
+"[english]VR_PhysicsProp_NekoPlushie"	"Neko Toy"
 }
 }
