--- a/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_turkish.txt
+++ b/tools/steamvr_environments/game/steamtours/pak01_dir/panorama/localization/steamtours_turkish.txt
@@ -1955,8 +1955,8 @@
 "[english]VR_PropTool_FreezeTool_Desc"	"Use this tool to freeze objects in place, thaw objects that are frozen, clone objects or delete them from the world."
 "VR_PhysicsProp_TidehunterToy001"	"Tidehunter Oyuncağı"
 "[english]VR_PhysicsProp_TidehunterToy001"	"Tidehunter Toy"
-"VR_PhysicsProp_TidehunterToy001_Desc"	"Dota 2'den Tidehunter oyuncağı."
-"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2."
+"VR_PhysicsProp_TidehunterToy001_Desc"	"Dota 2'den Tidehunter oyuncağı.\n\nDota 2'yi oynayarak kilidi açıldı."
+"[english]VR_PhysicsProp_TidehunterToy001_Desc"	"The Tidehunter Toy from Dota 2.\n\nUnlocked by playing Dota 2."
 "SmallBubble"	"KÜÇÜK"
 "[english]SmallBubble"	"SMALL"
 "BigBubble"	"BÜYÜK"
@@ -2237,10 +2237,10 @@
 "[english]SetHome_Button"	"Set As Home"
 "IsHome_Button"	"Mevcut Ev"
 "[english]IsHome_Button"	"Current Home"
-"PromotedItemTitle"	"HTC Vive Ortamı"
-"[english]PromotedItemTitle"	"HTC Vive Environment"
-"PromotedItemDescription"	"HTC tarafından Vive sahipleri için yaratılan ev ortamını ziyaret edin. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
-"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam."
+"PromotedItemTitle"	"Vive Ortamı"
+"[english]PromotedItemTitle"	"Vive Environment"
+"PromotedItemDescription"	"HTC tarafından Vive sahipleri için yaratılan ev ortamını ziyaret edin."
+"[english]PromotedItemDescription"	"Visit the home environment created by HTC for Vive users."
 "DismissLabel"	"Şimdi Değil"
 "[english]DismissLabel"	"Not Now"
 "ItemDetail_Ratings_Temp"	"32 Derecelendirme"
@@ -2341,12 +2341,12 @@
 "[english]MultiPlayerLabel"	"MULTIPLAYER VR"
 "VRTitleLabel"	"{s:app_name}"
 "[english]VRTitleLabel"	"{s:app_name}"
-"HTCPromoTitle"	"VIVE ORTAMI"
-"[english]HTCPromoTitle"	"VIVE ENVIRONMENT"
-"HTCPromoDesc"	"HTC tarafından Vive sahipleri için oluşturuldu."
-"[english]HTCPromoDesc"	"Made by HTC for Vive owners."
-"ValvePromoTitle"	"VALVE ORTAM KOLEKSİYONU"
-"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS COLLECTION"
+"HTCPromoTitle"	"VIVE ÖĞELERİ"
+"[english]HTCPromoTitle"	"VIVE ITEMS"
+"HTCPromoDesc"	"Vive sahipleri için oluşturulan Vive avatarı ve eşyalarına göz atmayı unutmayın."
+"[english]HTCPromoDesc"	"Don't forget to check out Vive avatar and prop for Vive owners."
+"ValvePromoTitle"	"VALVE ORTAMLARI"
+"[english]ValvePromoTitle"	"VALVE ENVIRONMENTS"
 "ValvePromoDesc"	"SteamVR için Valve sanatçıları tarafından yapılan ortamlar için buraya tıklayın."
 "[english]ValvePromoDesc"	"Click here for environments made by Valve artists for SteamVR."
 "ValveEnvironmentsTitle"	"Valve Sanatçıları tarafından yapılan Ortamlar"
@@ -2551,9 +2551,25 @@
 "[english]VR_Map_HawaiiBeach_Desc"	"A beach on the Island of Hawai'i."
 "Quest_Pin_Hawaii_Lab_Desc"	"Sahildeki lav kayaları arasında gizli bir Aperture Science rozetini bulun."
 "[english]Quest_Pin_Hawaii_Lab_Desc"	"Find a hidden Aperture Science pin among the lava rocks on the beach."
+"VR_PhysicsProp_AudioshieldShield001"	"Audioshield Kalkanı"
+"[english]VR_PhysicsProp_AudioshieldShield001"	"Audio Shield"
+"VR_PhysicsProp_AudioshieldShield001_Desc"	"Müzikal bombardıman olduğu takdirde kuşanın.\n\nAudioshield'da görüldüğü gibi."
+"[english]VR_PhysicsProp_AudioshieldShield001_Desc"	"Equip in case of musical bombardment.\n\nUnlocked by owning Audioshield."
 "VR_PhysicsProp_GauntletTrophy"	"Eldiven"
 "[english]VR_PhysicsProp_GauntletTrophy"	"The Gauntlet"
 "VR_PhysicsProp_ASAmmoBox"	"Cephane Kutusu"
 "[english]VR_PhysicsProp_ASAmmoBox"	"Ammo Box"
+"VR_PhysicsProp_ViveLogoStatue"	"Vive Heykeli"
+"[english]VR_PhysicsProp_ViveLogoStatue"	"Vive Sculpture"
+"VR_Avatar_ViveHeadset"	"HTC Vive Başlığı"
+"[english]VR_Avatar_ViveHeadset"	"HTC Vive Headset"
+"VR_Avatar_ViveHeadset_Desc"	"Deluxe Audio Kayışına sahip HTC Vive Başlığı.\n\nVive kullanıcıları erişebilir."
+"[english]VR_Avatar_ViveHeadset_Desc"	"The HTC Vive Headset with Deluxe Audio Strap.\n\nAvailable to Vive users."
+"VR_Avatar_OnwardHead"	"MARSOC Kaskı"
+"[english]VR_Avatar_OnwardHead"	"MARSOC Helmet"
+"VR_Avatar_MptamHmd"	"İlk Valve Prototipi"
+"[english]VR_Avatar_MptamHmd"	"Early Valve Prototype"
+"VivePromoTitle"	"Vive Öğeleri"
+"[english]VivePromoTitle"	"Vive Items"
 }
 }
